--- a/style.css/repo.css
+++ b/style.css/repo.css
@@ -148,7 +148,9 @@
     .div-1-child-3 {
         display: none;
     }
-
+    .body-2 {
+        margin-bottom: 120px;
+    }
     .body-2-div {
         justify-content: space-around;
         width: 100%;
@@ -252,7 +254,6 @@
         flex-flow: column wrap;
         align-items: center;
         justify-content: space-between;
-        height: auto;
         width: 100%;
         height: 25%;
     }
@@ -263,6 +264,9 @@
         align-items: center;
         width: 350px;
         height: 40px;
+    }
+    .body-3-link a {
+        margin: 10px 0px;
     }
     .body-4 {
         display: flex;
@@ -322,13 +326,22 @@
         width: 35px;
         height: 35px;
     }
+    .body-5 {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        padding-top: 10px;
+        width: 100%;
+        height: 880px;
+        position: relative;
+    }
     .body-5-div {
         display: flex;
         flex-flow: column wrap;
         justify-content: space-between;
         align-items: center;
         width: 100%;
-        height: 800px;
+        height: 880px;
         padding: 10px 15px;
         box-sizing: border-box;
     }
@@ -348,7 +361,364 @@
         justify-content: space-between;
         height: 50%;
         width: 100%;
-        padding: 10px 15px;
+        padding: 10px 0px;
         box-sizing: border-box;
+    }
+    .body-5-right-1 {
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: space-evenly;
+        height: 75%;
+        width: 100%;
+        padding-left: 30px;
+        padding-top: 20px;
+        box-sizing: border-box;
+    }
+    .body-5-right-1 > h3 {
+        font-size: 23px;
+        font-weight: 600;
+        max-width: 360px;
+        margin-bottom: 0px;
+        margin-top: 0px;
+    }
+    .body-5-div-child {
+        display: flex;
+        flex-flow: row wrap;
+        align-items: center;
+        width: 350px;
+        height: 50px;
+        border-radius: 50px;
+        background-color: white;
+    }
+    .body-5-div-child > p {
+        margin: 0px;
+        margin-left: 10px;
+        font-weight: 600;
+        font-size: 13px;
+        max-width: 200px;
+    }
+    .body-5-right-2 {
+        display: flex;
+        flex-flow: row wrap;
+        align-items: center;
+        height: 20%;
+        width: 100%;
+        padding-left: 30px;
+    }
+    .body-5-child {
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: center;
+        width: 92.5%;
+        height: 48%;
+        background-color: #f6f3fe;
+        border-radius: 0px 8px 0px 0px;
+        padding-left: 30px;
+    }
+    .body-5-child-1 {
+        border-radius: 0px 0px 0px 0px;
+    }
+    .body-5-child-2 {
+        border-radius: 0px 0px 80px 0px;
+    }
+    .body-5-child h3 {
+        font-size: 20px;
+        font-weight: bold;
+        margin-top: 15px;
+        max-width: 350px;
+    }
+    .body-5-footer {
+        position: absolute;
+        bottom: 0%;
+        width: 100%;
+        height: 85%;
+        background-color: #171321;
+        z-index: -1;
+    }
+    .body-6 {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        padding-top: 10px;
+        width: 100%;
+        height: auto;
+        background-color: #171321;
+        margin-bottom: 30px;
+        padding-bottom: 20px;
+        box-sizing: border-box;
+    }
+    .body-6-div {
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: start;
+        width: 100%;
+        height: 100%;
+    }
+    .body-6-div-child {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-evenly;
+        width: 100%;
+        margin: 30px 0px 35px 0px;
+    }
+    .DevSecOps {
+        font-size: 30px;
+        background: linear-gradient( to right, #df9e76, #c894a5, #9573e7);
+        background-clip: text;
+        color: transparent;
+        width: 170px;
+        height: 35px;
+        margin: 20px 0px 20px 20px;
+    }
+    .body-6-div-child .child-1 {
+        font-size: 15px;
+        font-weight: 600;
+        width: 120px;
+        text-align: center;
+        height: 45px;
+        border-style: none;
+        border-radius: 30px;
+        color: white;
+        background-color: #7e22ce;
+        transition: 0.2s linear;
+    }
+    .body-6-div-child .child-2 {
+        font-size: 15px;
+        font-weight: 600;
+        width: 120px;
+        text-align: center;
+        height: 45px;
+        border-style: none;
+        border-radius: 30px;
+        color: white;
+        background-color: #45424d;
+        transition: 0.2s linear;
+    }
+    .body-6-div-child .child-3 {
+        font-size: 15px;
+        font-weight: 600;
+        width: 120px;
+        text-align: center;
+        height: 45px;
+        border-style: none;
+        border-radius: 30px;
+        color: white;
+        background-color: #45424d;
+        transition: 0.2s linear;
+    }
+    .body-6-h2 {
+        font-size: 40px;
+        color: white;
+        width: 380px;
+        margin: 0px 0px 30px 20px;
+    }
+    .body-6-left {
+        display: flex;
+        flex-flow: column wrap;
+        width: 100%;
+        height: 450px;
+        margin: 10px 0px;
+    }
+    .body-6-text {
+        display: flex;
+        flex-flow: column wrap;
+        width: 100%;
+        height: auto;
+        padding-left: 20px;
+        box-sizing: border-box;
+    }
+    .body-6-left > p {
+        max-width: 400px;
+        font-size: 20px;
+        color: white;
+        /* padding: 0px 20px; */
+    }
+    .body-6-right {
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: start;
+        width: 100%;
+        height: 380px;
+    }
+    .body-6-right img {
+        width: 390px;
+        height: 420px;
+    }
+    .body-6-list > li {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-around;
+    }
+    .body-6-a {
+        width: 350px;
+    }
+    .body-6-a > a {
+        text-decoration: none;
+        font-size: 20px;
+        font-weight: 600;
+        margin: 0px 0px 0px 0px;
+        color: white;
+    }
+    .body-7 {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 1500px;
+        margin-bottom: 0px;
+    }
+    .body-7-div {
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: start;
+        width: 100%;
+        height: 100%;
+        padding: 10px 20px;
+        box-sizing: border-box;
+    }
+    .body-7-head {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        width: 100%;
+        height: 115px;
+        position: relative;
+    }
+    .body-7-logo-1 {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        align-items: end;
+        width: 160px;
+        height: 80px;
+    }
+    .body-7-logo-2 {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        align-items: end;
+        width: 160px;
+        height: 80px;
+        margin-left: 70px;
+    }
+    .body-7-logo-3 {
+        display: none;
+    }
+    .body-7-logo-4 {
+        display: none;
+    }
+    .body-7-logo-5 {
+        display: none;
+    }
+    .body-7-head::after {
+        content: '';
+        width: 100%;
+        height: 5px;
+        background-color: #f2f1f5;
+        margin-top: 10px;
+    }
+    .body-7-logo-1::after {
+        content: '';
+        width: 190px;
+        height: 5px;
+        background-color: #7759c2;
+        bottom: 10px;
+        left: -10px;
+        margin-top: 30px;
+        position: absolute;
+        z-index: 3;
+    }
+    .body-7-left-1 > h3 {
+        font-size: 35px;
+        margin: 10px 0px;
+        max-width: 380px;
+    }
+    .body-7-left-1 h3 > a {
+        font-size: 35px;
+        text-decoration: none;
+        color: #7759c2;
+    }
+    .body-7-div-child {
+        display: flex;
+        flex-flow: row wrap;
+        align-items: center;
+        width: 100%;
+        height: 20%;
+        border-radius: 50px;
+        background-color: #f6f3fe;
+    }
+    .body-7-footer {
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: start;
+        width: 100%;
+        height: 80%;
+    }
+    .body-7-right {
+        display: flex;
+        flex-flow: column wrap;
+        width: 100%;
+        height: 50%;
+        margin-top: 10px;
+        position: relative;
+    }
+    .body-7-text {
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: space-between;
+        width: 90%;
+        height: 58%;
+        padding: 30px 20px;
+        border-radius: 10px 10px 30px 10px;
+        background-color: #f6f3fe;
+        box-sizing: border-box;
+    }
+    .body-7-img > img {
+        width: 150px;
+        height: 150px;
+        bottom: 200px;
+        right: -10px;
+        position: absolute;
+    }
+    
+    .body-7-text-1 > p {
+        max-width: 310px;
+        font-size: 20px;
+        margin: 0px 0px;
+        margin-bottom: 30px;
+    }
+    .body-7-left {
+        display: flex;
+        flex-flow: column wrap;
+        width: 100%;
+        height: 48%;
+    }
+    .body-7-div-child > h3 {
+        margin: 0px;
+        margin-left: 25px;
+        font-size: 23px;
+        max-width: 80px;
+    }
+    .body-7-div-child > p {
+        margin: 0px;
+        margin-left: 10px;
+        font-weight: 600;
+        font-size: 91%;
+        max-width: 250px;
+    }
+    .body-7-left-1 {
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: space-around;
+        width: 100%;
+        height: 60%;
+    }
+    .body-7-left-2 {
+        display: flex;
+        flex-flow: row wrap;
+        align-items: center;
+        height: 15%;
+        width: 100%;
     }
 }
